--- a/sasslint/dot.sass-lint.yml
+++ b/sasslint/dot.sass-lint.yml
@@ -54,7 +54,7 @@ rules:
     - 0
     - convention: BEM
   indentation:
-    - 2
+    - 1
     - size: 2
   leading-zero:
     - 2
@@ -118,4 +118,52 @@ rules:
   variable-name-format:
     - 0
     - convention: hyphenatedlowercase
+  zero-unit: 1
+resolvers:
+  bem-depth:
+    - 1
+    -
+      max-depth: 4
+  border-zero: 1
+  empty-line-between-blocks:
+    - 1
+    - include: true
+    - allow-single-line-rulesets: true
+  final-newline:
+    - 1
+    - include: true
+  force-attribute-nesting: 0
+  force-element-nesting: 0
+  force-pseudo-nesting: 0
+  hex-length:
+    - 1
+    - style: short
+  hex-notation:
+    - 1
+    - style: lowercase
+  id-name-format:
+    - 0
+    - convention: BEM
+  indentation:
+    - 1
+    - size: 2
+  no-color-keywords: 0
+  no-color-literals: 0
+  no-css-comments: 0
+  no-important: 0
+  no-mergeable-selectors: 0
+  no-trailing-zero: 2
+  no-url-protocols: 0
+  property-sort-order: 2
+  property-units: 0
+  pseudo-element: 0
+  space-after-colon:
+    - 2
+    - include: true
+  space-after-comma: 0
+  space-before-colon: 2
+  space-between-parens:
+    - 2
+    - include: false
+  url-quotes: 1
   zero-unit: 1
