--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -9,8 +9,9 @@ neovim==0.3.1
 neovim-remote==2.1.4
 pydocstyle==3.0.0
 pyflakes==2.1.0
+pylast==3.1.0
 pylint==2.2.2
+speedtest-cli==2.0.2
 yamllint==1.15.0
 vim-vint==0.3.18
 vulture==1.0
-speedtest-cli==2.0.2
